# verse-monitor

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.mcp  Dockerfile.mcp.dev  Dockerfile.monitor  Dockerfile.monitor.dev  Dockerfile.portal  Dockerfile.portal.dev  Makefile  README.md  ingest_big_batch.py  ingest_events_direct.py  pyproject.toml  requirements.txt  test_rag_e2e.py
.claude/: settings.json
.claude/agents/: verse-dev.md  verse-review.md
.claude/commands/: deploy.md  verify.md
deployments/: docker-compose.hardened.yml  docker-compose.yml
deployments/verse-mcp/: .env.dev.example  docker-compose.dev.yml
ingestion/: chunking.py  run.py  test_ingest.py  test_quick.py  wiki_api.py  wiki_ingest.py
scripts/: DEPLOYMENT-GUIDE.md  audit_corpus.py  hardening-system.sh  ingest_big_batch.py  ingest_events_direct.py  scan-images-trivy.sh  traefik-security.yml
verse_mcp/: constants.py  server.py
verse_mcp/models/: inputs.py  outputs.py
verse_mcp/scripts/: evaluation.py
verse_mcp/services/: cache.py  classifier.py  embeddings.py  llm.py  rag.py  ready.py  retriever.py  synthesizer.py
verse_mcp/tools/: ask.py  guide.py  lore.py  monitor.py  sc_search_community.py  ships.py
verse_monitor/: __init__.py  config.py  errors.py  main.py  models.py
verse_monitor/alerts/: __init__.py  formatter.py
verse_monitor/health/: collection_check.py
verse_monitor/monitoring/: alerts.py
verse_monitor/pipeline/: __init__.py  classifier.py  entities.py  publisher.py
verse_monitor/sources/: __init__.py  base.py  comm_links.py  reddit.py  (+4 more)
(+18 files in other folders)
