[project]
name = "verse-mcp"
version = "0.1.0"
description = "Star Citizen MCP Server for VERSE"
authors = ["GLaDOS <glados@aperture-science.labs>"]
dependencies = [
    "mcp[cli]>=1.0.0",
    "fastmcp>=0.1.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "redis>=5.0.0",
    "qdrant-client>=1.0.0",
    "anthropic>=0.0.0",
    "openai>=1.0.0",
    "beautifulsoup4>=4.0.0",
    "tiktoken>=0.0.0",
]
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"