[project]
name = "verse"
version = "0.2.0"
description = "Verse — Star Citizen MCP Server + Monitoring Service"
requires-python = ">=3.11"
dependencies = [
    # MCP server
    "fastmcp>=2.14.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "redis>=5.0.0",
    "qdrant-client>=1.12.0",
    "openai>=1.0.0",
    "starlette>=0.37.0",
    # Monitoring service
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "apscheduler>=3.10.0",
    "pydantic-settings>=2.0.0",
    "grpcio>=1.0.0",
]

[project.scripts]
verse-mcp = "verse_mcp.server:main"
verse-monitor = "verse_monitor.main:main"

[tool.setuptools.packages.find]
include = ["verse_mcp*", "verse_monitor*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
